Changelog
=========

12.1 - (2021-09-21)
---------------------------
* Change: Modified ContentTypeLookUp so that it gets the right portal factory
  when adding a new object
  [iulianpetchesi refs #120841]
* Upgrade step: Changed js/css conditions in order for related items widget
  to work on ++add++
  [iulianpetchesi refs #120841]

12.0 - (2021-09-10)
---------------------------
* Change: Refs #134485 return dexterity results in forward backward and auto relations
  [ichim-david refs #134485]
* Patch: Archetypes reference engine
  [ichim-david refs #134485]
* Patch: Archetypes referenceable
  [ichim-david refs #134485]

11.7 - (2021-03-29)
---------------------------
* Feature: added the new custom_css property to all facet widgets.
  [alecghica refs #126549]

11.6 - (2020-11-17)
---------------------------
* Bug fix: ensure relatedItems reference widget doesn't crash
  when its not initialized on a dexterity content type
  [ichim-david refs #121889]

11.5 - (2020-10-22)
---------------------------
* Feature: Added dexterity widget for relatedItems
  [iulianpetchesi #121889]
* Change: added notoc class to related content header as it
  shouldn't appear in the body toc portlet
  [ichim-david refs #119674]

11.4 - (2020-09-23)
---------------------------
* Change: Related items now also appear for dexterity objects, not only archetypes
  [iulianpetchesi #120841]

11.3 - (2020-09-18)
---------------------------
* Change: use Type for photoALbumEntryType first then portal_type when setting
  photoAlbumEntryType
  [ichim-david refs #117296]

11.2 - (2020-06-26)
---------------------------
* Feature: added draft or archived info within photoAlbumEntry
  [ichim-david refs #117295]
* Feature: added photoAlbumEntryType info to related albums for mini header
  condition
  [ichim-david refs #117296]

11.1 - (2020-06-22)
---------------------------
* Change: hide relation information within an accordion and display expired or
  non published ribbon on photoAlbumEntry entries